Refactor java endorsement verification. (#4350)
- Split and renamed EndorsementVerifier class and added main() functions so they can be called from the command line
- Use Optional<Failure> rather than Result<Boolean, Exception>
- Improved error handling during creation
- Fix a build breakage on copybara import
- Fix breakage in xtask Free disk space check
- Don't parse RekorLogEntry more than once
- Shortening in general
- Actual signature verification still not implemented